--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,12 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css",
+              ".node_modules/ng2-toastr/bundles/ng2-toastr.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/ng2-toastr/bundles/ng2-toastr.min.js"
+            ]
           },
           "configurations": {
             "production": {
